Added Lato font family, used in website

--- a/scss/_00-config.less
+++ b/scss/_00-config.less
@@ -25,9 +25,9 @@
 @paragraph-line-height : 1.8;
 
 // font stacks
-@font-stack-common : "Dejavu Sans", sans-serif;
+@font-stack-common :  "Droid Sans", sans-serif;
 //@font-stack-common      : Merriweather, Georgia, serif; // common font
-@font-stack-headings    : "Cantarell", Arial, sans-serif; // headings font
+@font-stack-headings    : "Lato", sans-serif; // headings font
 @font-stack-monospace   : Inconsolata, "DejaVu Sans Mono", Courier, monospace; // monospace font
 @font-stack-universal   : "Open Sans", FreeSans, Arimo, "Droid Sans", Helvetica, Arial, sans-serif; // universal stack
 
