--- a/scss/_00-config.less
+++ b/scss/_00-config.less
@@ -27,9 +27,9 @@
 // font stacks
 @font-stack-common :  "Droid Sans", sans-serif;
 //@font-stack-common      : Merriweather, Georgia, serif; // common font
-@font-stack-headings    : "Lato", sans-serif; // headings font
+@font-stack-headings    : 'Lato', sans-serif; // headings font
 @font-stack-monospace   : Inconsolata, "DejaVu Sans Mono", Courier, monospace; // monospace font
-@font-stack-universal   : "Open Sans", FreeSans, Arimo, "Droid Sans", Helvetica, Arial, sans-serif; // universal stack
+@font-stack-universal   : "Droid Sans", "Lato",  sans-serif; // universal stack
 
 // font colors
 @base-color             : #212121; // text color on body and content
